fixed landing overflow issue

--- a/src/less/home.less
+++ b/src/less/home.less
@@ -12,6 +12,7 @@
     background-repeat: no-repeat;
     backface-visibility: hidden;
     height: 100vh;
+    overflow: hidden;
     position: relative;
     transition: background 0.5s;
 
